unpackaged/main/default/objects/pse__Team_Schedule__c/fields/pse__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Effective_Date__c</fullName>
    <description>The date on which the schedule begins.</description>
    <inlineHelpText>The date on which the schedule begins.</inlineHelpText>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>