unpackaged/main/default/objects/pse__Team_Schedule__c/fields/pse__Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Notes__c</fullName>
    <description>Notes for the team schedule.</description>
    <inlineHelpText>Notes for the team schedule.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>