unpackaged/main/default/objects/pse__Team_Schedule__c/fields/pse__Send_Schedule__c.field-meta.xml
<CustomField>
    <fullName>pse__Send_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Notifications</description>
    <inlineHelpText>Send Notifications</inlineHelpText>
    <label>Send Notifications</label>
    <type>Checkbox</type>
</CustomField>