unpackaged/main/default/objects/pse__Team_Schedule__c/fields/pse__Team__c.field-meta.xml
<CustomField>
    <fullName>pse__Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The team associated with the schedule.</description>
    <inlineHelpText>The team associated with the schedule.</inlineHelpText>
    <label>Team</label>
    <referenceTo>pse__Team__c</referenceTo>
    <relationshipLabel>Team Schedules</relationshipLabel>
    <relationshipName>Team_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>