unpackaged/main/default/objects/pse__Team_Schedule__c/fields/pse__Team_Schedule_Template__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Schedule_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A lookup to the Team Schedule Template.</inlineHelpText>
    <label>Team Schedule Template</label>
    <referenceTo>pse__Team_Schedule_Template__c</referenceTo>
    <relationshipLabel>Team Schedules</relationshipLabel>
    <relationshipName>Team_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>